# OOP_finalproject

./: CMakeLists.txt  README.md
Data/BinaryData/: vector_bool_test.data
Data/XmlData/: binary_test.data  float_test.data  list_bool_test.data  list_test.data  set_bool_test.data
include/: binary.h  macro.h  userdefinetype.h  xml.h
src/: xml.cpp
test/: binary_test.cpp  xml_test.cpp
